more cpuid updates

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 we seem to have a few x86_64.def in various directorys 
 
-only want one set of cpuid code , we have config.guess and fat.c
+only want one set of cpuid code , we have config.guess and two copys of fat.c
+
