--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 we seem to have a few x86_64.def in various directorys 
 
-only want one set of cpuid code , we have config.guess and two copys of fat.c
+just got one cpuid.c not 3 copys
 
+as cpuid.c doesn't appear in the build system , put in in make dist etc in
+makefile.am
 
-just got cpuid.c fatcpuid.c now
 
