--- a/TODO
+++ b/TODO
@@ -6,3 +6,8 @@ not yet added to fat, can speed up if dont need exact mathematical propoerty
 not yet done testing
 
 temporary copy x86_64-defs.m4 in mpn/x86_64 so I can still use .asm files
+
+copy core2/*.asm k10/*.asm to nehalem for a quick boost for that chip
+
+new function divrem_hensel_1 asm and c  , not linked to the system  ie just
+a loose file , no test function etc
