--- a/TODO
+++ b/TODO
@@ -12,5 +12,5 @@ copy core2/*.asm k10/*.asm to nehalem for a quick boost for that chip
 new function divrem_hensel_1 asm and c  , not linked to the system  ie just
 a loose file , no test function etc
 
-new function divrem_euclidean_1 asm and c  , not linked to the system  ie just
-a loose file , no test function etc
+new functions divrem_euclidean_qr_1 asm and c (qr,r version)  
+no test functions  and not in fat
