--- a/TODO
+++ b/TODO
@@ -14,3 +14,7 @@ a loose file , no test function etc
 
 new functions divrem_euclidean_qr_1 asm and c (qr,r version)  
 no test functions  and not in fat
+
+mpn_divrem_1 with qxn=0 now calls mpn_divrem_euclidean_qr_1 always
+replace all internel calls to mpn_divrem_1 with the new euclidean
+we could replace mpn_mod_1   as well   !!!
