--- a/TODO
+++ b/TODO
@@ -2,8 +2,9 @@
 fake cpuid to test all paths
 
 new function mpn_divexact_byBm1of   generic and x86_64 versions done
-not yet added to fat, can speed up if dont need exact mathematical propoerty
-not yet done testing
+done speed, tests
+not done try , fat
+
 
 temporary copy x86_64-defs.m4 in mpn/x86_64 so I can still use .asm files
 
@@ -13,7 +14,9 @@ new function divrem_hensel_1 asm and c  , not linked to the system  ie just
 a loose file , no test function etc
 
 new functions divrem_euclidean_qr_1 asm and c (qr,r version)  
-no test functions  and not in fat
+done try 
+not done speed,tests,fat
+
 
 mpn_divrem_1 with qxn=0 now calls mpn_divrem_euclidean_qr_1 always
 replace all internel calls to mpn_divrem_1 with the new euclidean
